# dnb_robot_movement_interface

./: .gitignore
dnb_tf/: CHANGELOG.md  CMakeLists.txt  package.xml
dnb_tf/scripts/: tf_chain_publisher.py  tf_chain_publisher_ros.py  tf_move_relative.py
dnb_tf/scripts/tests/: publishtest.py
dnb_tf/srv/: Transform.srv  TransformPose.srv
dnb_tf/test/: Readme  autotest_dnb_tf.py  autotest_dnb_tf.test
robot_movement_interface/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
robot_movement_interface/launch/: actionizer.launch  notify_robot_start.launch
robot_movement_interface/msg/: AnalogIOValue.msg  Command.msg  DigitalIOValue.msg  ErrorCodeInformation.msg  EulerFrame.msg  IECVariable.msg  IECVariableList.msg  IOChanges.msg  IOConstants.msg  IOError.msg  IOGroupInfo.msg  IOID.msg  IOInfo.msg  IOState.msg  IOStates.msg  Joints.msg  Result.msg
robot_movement_interface/scripts/: actionizer.py  notify_robot_start.py
robot_movement_interface/srv/: GetAllIOGroupInfos.srv  GetAnalogIOs.srv  GetCategoryIOs.srv  GetDigitalIOs.srv  GetErrorCodeInformation.srv  GetFK.srv  GetFKList.srv  GetIK.srv  GetIKList.srv  GetIOCategories.srv  GetIOGroupInfo.srv  GetIOInfo.srv  SetAnalogIOs.srv  SetDigitalIOs.srv  SetIOCategories.srv  SetIODisplayTitle.srv  SetIOSimulated.srv
