<?xml version="1.0"?>
<package>
  
  <name>robot_movement_interface</name>
  <version>1.1.0</version>
  <description>Message definition of the Robot Movement Interface</description>
  <maintainer email="paq@ipa.fhg.de">Pablo Quilez Velilla</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
